Week2 การบ้าน All (เสร็จและ)

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <html>
   <head>
-    <title>My First HTML</title>
+    <title>แชทพระเจ้า</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <script src="index.js"></script>
   </head>
   <body>
-    <div id="userlist" class="box" onclick="helloworld()">
-      Hello World!, with HTML!
+
+    <div id="หัวข้อแชท" class="box1">
+      <h1>พื้นที่สนทนาของเหล่าเทพพระเจ้า</h1>
     </div>
-    <!-- Exercise 02-1: Add two more divs for chat and inputbox -->
+
+    <div id="ช่องแสดงข้อความ" class="box2">
+      <h2>ดูซิมีอะไรมั้ง</h2>
+    </div>
+
+    <div id="พิมพ์ และส่งข้อความ" class="box3">
+      <h4>พิมพ์ดิ</h4>
+    </div>
+
+    <div id="ปุ่มส่ง" class="box4" onclick="send()">
+      <h4>ส่ง ๆ</h4>
+    </div>
+
   </body>
 </html>
