Week2 การบ้าน All (เสร็จและ)-3

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
     <div id="พิมพ์ และส่งข้อความ" class="box3">
       <h4>พิมพ์ดิ</h4>
+      <textarea></textarea>
     </div>
+
+
 
     <div id="ปุ่มส่ง" class="box4" onclick="send()">
       <h4>ส่ง ๆ</h4>
